welcome.lessons.welcome.variables.Variables.scala.error
Variables:9: error: type mismatch;
 found   : Unit
 required: Boolean
while(dejaFait=nbPas) {
              ^